--- a/WebBlog/ClientApp/src/app/home/home.component.html
+++ b/WebBlog/ClientApp/src/app/home/home.component.html
@@ -10,6 +10,6 @@
 <br>
 <ul>
   <li><a routerLink="/customers">Customer</a></li>
-  <li *ngIf="!isUserAuthenticated()"><a routerLink="/login">Login</a></li>
+  <li *ngIf="!isUserAuthenticated()"><a routerLink="/auth">Login</a></li>
   <li *ngIf="isUserAuthenticated()"><a class="logout" (click)="logOut()">Logout</a></li>
 </ul>
