--- a/WebBlog/ClientApp/src/app/authentication/registration/registration.component.html
+++ b/WebBlog/ClientApp/src/app/authentication/registration/registration.component.html
@@ -1,5 +1,5 @@
 ﻿<form class="col-12" #registrationForm="ngForm" (ngSubmit)="registration(registrationForm)">
-  <div *ngIf="invalidAuth" class="ml-auto mt-5 alert alert-danger">Invalid username or password.</div>
+  <div *ngIf="invalidSignUp" class="ml-auto mt-5 alert alert-danger">Invalid username or password.</div>
   <br/>
 
   <p>
