--- a/WebBlog/ClientApp/src/app/home/home.component.html
+++ b/WebBlog/ClientApp/src/app/home/home.component.html
@@ -9,7 +9,7 @@
 
 <br>
 <ul>
-  <li><a routerLink="/customers">Customer</a></li>
+  <li><a routerLink="/posts">posts</a></li>
   <li *ngIf="!isUserAuthenticated()"><a routerLink="/auth">Login</a></li>
   <li *ngIf="isUserAuthenticated()"><a class="logout" (click)="logOut()">Logout</a></li>
 </ul>
