--- a/WebBlog/ClientApp/src/app/blog/blog.component.html
+++ b/WebBlog/ClientApp/src/app/blog/blog.component.html
@@ -1,9 +1,9 @@
-<div class="col-3 offset-1 px-0 mb-3" id="sidebar" style="background-color: white">
+<div class="col-3 p-0 m-0 bg-dark" id="sidebar">
   <nav>
     <div class="col-auto sidebar-header">
       <figure class="logo col-12 figure mt-3 text-center">
-        <img src="assets/img/logo.png" class="figure-img img-fluid rounded" alt="cup_logo.png">
-        <figcaption class="figure-caption text-light"><h1 class="text-dark"><span style="color: hotpink">GA</span>LLARIA</h1></figcaption>
+        <img src="assets/img/logo.svg" class="figure-img img-fluid rounded" alt="cup_logo.svg">
+        <figcaption class="figure-caption text-light"><h1 class="text-white"><span style="color: darkorange">B</span>LOG</h1></figcaption>
       </figure>
     </div>
 
@@ -17,7 +17,7 @@
       </div>
 
 
-      <div class="about col-10 offset-1 mt-5">
+      <div class="about col-10 offset-1 mt-5 text-white">
         <h1>About me</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cupiditate distinctio dolores eaque ex illo impedit maxime quasi. Atque, explicabo!</p>
       </div>
@@ -26,7 +26,7 @@
 
   </div>
 
-  <div class="col-7 mx-0 mt-0 mb-3 p-0" id="content">
+  <div class="col-9" id="content">
     <button class="col-1 offset-11" (click)="logOut()">Exit</button>
 
     <main>
