--- a/WebBlog/ClientApp/src/app/blog/menu-button/menu-button.component.html
+++ b/WebBlog/ClientApp/src/app/blog/menu-button/menu-button.component.html
@@ -1,8 +1,8 @@
-﻿<button type="button" class="icon btn shadow-none w-100 mt-3 text-uppercase text-left">
-  <span class="icon-bg float-left text-center">
+﻿<button type="button" class="icon btn w-100 mt-3 text-uppercase text-left">
+  <span class="icon-bg float-left text-center bg-light">
     <svg class="icon-img mt-2" xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 11 16">
-      <path class="cls-1" [attr.d]="d" [attr.transform]="transform"/>
+      <path class="cls-1" [attr.d]="d" [attr.transform]="transform" fill="darkorange"/>
     </svg>
   </span>
-  <span class="icon-text col">{{name}}</span>
+  <span class="icon-text col text-light">{{name}}</span>
 </button>
