--- a/WebBlog/ClientApp/src/app/authentication/auth.component.css
+++ b/WebBlog/ClientApp/src/app/authentication/auth.component.css
@@ -1,8 +1,9 @@
 ﻿.active{
-  border-bottom: 2px solid deeppink;
+  border-bottom: 2px solid darkorange;
 }
 
 button:focus {
   outline:none;
   box-shadow: none;
 }
+
