--- a/WebBlog/ClientApp/src/app/blog/content/content.component.html
+++ b/WebBlog/ClientApp/src/app/blog/content/content.component.html
@@ -1,22 +1,9 @@
 ﻿<div *ngIf="!isForm" >
   <div *ngIf="mainPost" id="main-content">
-
-    <div class="col-auto m-0 p-0">
-      <h2 class="title text-uppercase">{{mainPost.post.title}}</h2>
-    </div>
-
-    <div class="row w-100 mx-0 mt-2 p-0 border bg-dark text-light">
-
-      <div class="col-auto">
-        <p class="description">{{mainPost.post.description}}</p>
-      </div>
-      <blog-post-info-component
-        [postViewData]="mainPost"
-        [isCreator]="userPosts.isCreator"
-        (messageToUpdate)="getPosts()">
-      </blog-post-info-component>
-
-    </div>
+    <blog-main-post-component [mainPost]="mainPost"
+                              [isCreator]="userPosts.isCreator"
+                              (messageToUpdate)="getPosts()">
+    </blog-main-post-component>
   </div>
 
   <div class="row mt-1">
@@ -42,22 +29,24 @@
   </div>
 
 
-  <div *ngIf="userPosts">
-    <div class="row"  *ngFor="let post of userPosts.posts">
-      <div class="offset-1" [ngClass]="isViewRow ? 'col-10' : 'col-4'">
+  <div *ngIf="userPosts" class="row">
+      <div class="offset-1" [ngClass]="isViewRow ? 'col-10' : 'col-4'"
+           *ngFor="let post of userPosts.posts">
+
         <blog-post-card-component
           [postViewData]="post"
           [isCreator]="userPosts.isCreator"
           (messageToUpdate)="getPosts()">
         </blog-post-card-component>
+
       </div>
-    </div>
   </div>
 
 </div>
 
 
 <form *ngIf="isForm" #postForm="ngForm" class="row col col-lg-8 col-10 offset-lg-2 offset-1 bg-dark mt-4 text-light"
+      [attr.enctype]="type=='image' || type=='video' ? 'multipart/form-data': null"
       (ngSubmit)="setPosts(postForm)">
   <h1 class="col-auto offset-sm-4 offset-1">Add post</h1>
 
@@ -74,6 +63,11 @@
   <div class="col-12 row offset-1 mt-2 mb-4">
     <label for="description" class="sr-only">Description</label>
     <textarea ngModel name="description" id="description" cols="30" rows="10" placeholder="Description" class="col col-10 rounded-lg"></textarea>
+  </div>
+
+  <div *ngIf="type=='image' || type=='video'" class="col-12 row offset-1 mt-2 mb-4">
+    <label for="{{type}}" class="sr-only">{{type}}</label>
+    <input #file type="file" id="{{type}}" name="file" (change)="changeFile(file.files[0])" >
   </div>
 
   <button type="submit" class="col-4 offset-1 btn rounded-0 text-dark" style="background-color: crimson"
