--- a/WebBlog/ClientApp/src/app/blog/post-card/post-card.component.html
+++ b/WebBlog/ClientApp/src/app/blog/post-card/post-card.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="postViewData.post.type=='image' || postViewData.post.type=='video'" class="col-auto card-header border-0 p-0 m-0"
        onclick="">
 
-    <img *ngIf="postViewData.post.type=='image'" src="assets/img/test.jpg" class="img-fluid" alt="image name">
+    <img *ngIf="postViewData.post.type=='image'" src="{{createFullSrc(postViewData.post.fileUrl)}}" class="img-fluid" alt="image name">
 
     <div *ngIf="postViewData.post.type=='video'">
       <img class="position-absolute" src="assets/img/video_icon.png" alt="" style="margin-top:25%;margin-left:-30px;">
