--- a/WebBlog/ClientApp/src/app/authentication/registration/registration.component.html
+++ b/WebBlog/ClientApp/src/app/authentication/registration/registration.component.html
@@ -76,5 +76,5 @@
     <input type="text" id="email" name="email" formControlName="email" class="col-8 mt-2" placeholder="email" >
   </p>
 
-  <input type="submit" value="submit" [disabled]="signUpForm.invalid" class="col-auto mt-2 btn rounded-0" style="background-color: darkorange">
+  <input type="submit" value="submit" [disabled]="signUpForm.invalid" class="col-auto mt-2 btn btn-orange rounded-0">
 </form>
