--- a/WebBlog/ClientApp/src/app/authentication/login/login.component.html
+++ b/WebBlog/ClientApp/src/app/authentication/login/login.component.html
@@ -28,6 +28,6 @@
     <input type="password" id="password" name="password" formControlName="password" class="col-8 mt-2" placeholder="password">
   </p>
 
-  <input type="submit" value="submit" [disabled]="loginForm.invalid" class="col-auto btn rounded-0" style="background-color: darkorange">
+  <input type="submit" value="submit" [disabled]="loginForm.invalid" class="col-auto btn btn-orange rounded-0">
 
 </form>
