--- a/WebBlog/ClientApp/src/app/blog/post-card/post-card.component.html
+++ b/WebBlog/ClientApp/src/app/blog/post-card/post-card.component.html
@@ -35,6 +35,6 @@
   </div>
   <!-- block card content ends-->
 
-  <button *ngIf="postViewData.post.type=='article'" type="button" class="btn btn-secondary" style="cursor: pointer">Show</button>
+  <button *ngIf="postViewData.post.type=='article'" type="button" class="btn btn-secondary">Show</button>
 </div>
 <!-- post card ends-->
