--- a/WebBlog/ClientApp/src/app/blog/post-form/post-form.component.html
+++ b/WebBlog/ClientApp/src/app/blog/post-form/post-form.component.html
@@ -13,24 +13,25 @@
     <input ngModel type="text" id="title" name="title" placeholder="Title" class="col col-8 rounded-lg">
   </div>
 
-  <div class="col-12 row offset-1 mt-2 mb-4">
+  <div class="col-12 row offset-1 mt-2 mb-2">
     <label for="description" class="sr-only">write description</label>
     <textarea ngModel name="description" id="description" cols="30" rows="10" placeholder="Description" class="col col-10 rounded-lg"></textarea>
   </div>
 
-  <div class="col-12 row offset-1 mt-2 mb-4">
+  <div class="col-12 row m-0 p-0">
     <label for="tags" class="sr-only">write tags with spaces</label>
-    <input ngModel type="text" id="tags" name="tags" placeholder="tags: tag1 tag2 ..." class="col col-8 rounded-lg">
+    <input ngModel type="text" id="tags" name="tags" placeholder="tags: tag1 tag2 ..." class="col col-10 offset-1 rounded-lg">
   </div>
 
-  <div *ngIf="type=='image' || type=='video'" class="col-12 row offset-1 mt-2 mb-4">
+  <div *ngIf="type=='image' || type=='video'" class="col-12 row mt-2">
     <label for="{{type}}" class="sr-only">need chose {{type}} fike</label>
-    <input #file type="file" id="{{type}}" name="file" (change)="changeFile(file.files[0])" >
+    <input #file type="file" id="{{type}}" name="file"  class="col col-10 offset-1"
+           (change)="changeFile(file.files[0])" >
   </div>
 
-  <button type="submit" class="col-4 offset-1 btn rounded-0 text-dark" style="background-color: crimson"
-          (click)="isForm=false">Cancel</button>
-  <button type="submit" class="col-4 offset-1 btn rounded-0 text-dark" style="background-color: darkorange">Submit</button>
+  <button type="submit" class="mt-4 col-4 offset-1 btn btn-crimson rounded-0 text-dark"
+          (click)="closeForm()">Cancel</button>
+  <button type="submit" class="mt-4 col-4 offset-1 btn btn-orange rounded-0 text-dark">Submit</button>
 
 
 </form>
