--- a/WebBlog/ClientApp/src/app/blog/content/content.component.html
+++ b/WebBlog/ClientApp/src/app/blog/content/content.component.html
@@ -37,6 +37,7 @@
           [isViewRow]="isViewRow"
           [postViewData]="post"
           [isCreator]="isCreator"
+          (messageToChangePost)="changePosts($event)"
           (messageToUpdate)="getPosts()">
         </blog-post-card-component>
 
