--- a/WebBlog/ClientApp/src/app/blog/content/content.component.html
+++ b/WebBlog/ClientApp/src/app/blog/content/content.component.html
@@ -36,7 +36,7 @@
         <blog-post-card-component
           [isViewRow]="isViewRow"
           [isCreator]="isCreator"
-          [(postViewData)]="post"
+          [(post)]="post"
           [(mainPost)]="mainPost"
           (messageToUpdate)="getPosts()">
         </blog-post-card-component>
