--- a/WebBlog/ClientApp/src/app/blog/blog.component.html
+++ b/WebBlog/ClientApp/src/app/blog/blog.component.html
@@ -10,7 +10,7 @@
       </figure>
     </div>
 
-    <div class="col-10 offset-1">
+    <div *ngIf="userInfo" class="col-10 offset-1">
       <figure class="logo col-12 figure mt-3 text-center">
         <img [src]="createFullSrc(userInfo.imageUrl)" class="figure-img img-fluid rounded" alt="user profile">
         <figcaption class="figure-caption text-light"><span>{{userInfo.firstName}} {{userInfo.lastName}}</span></figcaption>
