--- a/WebBlog/ClientApp/src/app/blog/main-post/main-post.component.html
+++ b/WebBlog/ClientApp/src/app/blog/main-post/main-post.component.html
@@ -16,10 +16,38 @@
     <p class="description">{{mainPost.item.description}}</p>
   </div>
 
-  <blog-post-info-component
-    [postViewData]="mainPost"
+  <blog-item-info-component
+    [ItemInfo]="mainPost"
     [isCreator]="isCreator"
-    (messageToUpdate)="updatePosts()">
-  </blog-post-info-component>
+    (messageToUpdate)="updatePosts()"
+    [(isOpenComments)]="IsCommentOpen">
+  </blog-item-info-component>
 
 </div>
+
+<div *ngIf="isCommentOpen" class="mt-2 bg-dark text-light" style="border-top: 2px solid darkorange">
+  <div *ngFor="let comment of comments">
+    <blog-comment-component
+      [comment]="comment"
+      [isCreator]="isCreator"
+      [postId]="mainPost.item.id"
+      (messageToUpdate)="IsCommentOpen=true"
+      (messageToAnswer)="answerComment($event)">
+    </blog-comment-component>
+  </div>
+
+  <div class="row col-12 m-0 p-0 mt-5" style="border-top: 2px solid darkorange">
+    <button *ngIf="!isCommentFormActive" class="col-12 m-0 p-0 btn-light" (click)="isCommentFormActive = true">Add comment</button>
+    <form *ngIf="isCommentFormActive" class="col-12 m-0 p-0">
+      <textarea #content
+                id="content" name="content" cols="15" rows="10" placeholder="Input a comment"
+                style="width: 100%;">{{_comment ? '@' + _comment.user.userName + ',' : ''}} </textarea>
+      <button class="col-6 m-0 p-0 btn-light" (click)="cancelAnswer()">Cancel</button>
+      <button class="col-6 m-0 p-0 btn-light" (click)="saveComment(content.value)">Submit</button>
+
+    </form>
+  </div>
+
+</div>
+
+
