--- a/WebBlog/ClientApp/src/app/blog/post-card/post-card.component.html
+++ b/WebBlog/ClientApp/src/app/blog/post-card/post-card.component.html
@@ -1,13 +1,13 @@
 ﻿<!-- post card-->
-<div class="{{ postViewData.item.type }} card p-0 mt-5 bg-dark text-light">
-  <div *ngIf="postViewData.item.type=='image' || postViewData.item.type=='video'" class="col-auto card-header border-0 p-0 m-0"
+<div class="{{ post.item.type }} card p-0 mt-5 bg-dark text-light">
+  <div *ngIf="post.item.type=='image' || post.item.type=='video'" class="col-auto card-header border-0 p-0 m-0"
        onclick="">
 
-    <img *ngIf="postViewData.item.type=='image'"
-         src="{{createFullSrc(postViewData.item.fileUrl)}}" class="img-fluid" alt="image name"
+    <img *ngIf="post.item.type=='image'"
+         src="{{createFullSrc(post.item.fileUrl)}}" class="img-fluid" alt="image name"
          (click)="changePost()">
 
-    <div *ngIf="postViewData.item.type=='video'" class="col-auto m-0 p-0"
+    <div *ngIf="post.item.type=='video'" class="col-auto m-0 p-0"
          (click)="changePost()">
       <img class="position-absolute video-icon" src="assets/img/video_icon.png" alt="video icon">
       <img class="position-absolute" [ngClass]="isViewRow? 'video-play-row' : 'video-play-col'"
@@ -22,27 +22,27 @@
   <!-- block card content-->
   <div class="col card-block">
     <div class="card-title">
-      <h2 class="title">{{postViewData.item.title}}</h2>
+      <h2 class="title">{{post.item.title}}</h2>
     </div>
 
     <div class="m-0 p-0" style="border-bottom: 2px solid darkorange;">
-      <blog-post-info-component
+      <blog-item-info-component
         [isCreator]="isCreator"
-        [postViewData]="postViewData"
+        [ItemInfo]="post"
         (messageToUpdate)="updatePosts()">
-      </blog-post-info-component>
+      </blog-item-info-component>
     </div>
 
     <div class="card-text card-text mt-1">
-      <p class="description">{{SubDescription}}<span *ngIf="SubDescription.length < postViewData.item.description.length">...</span></p>
+      <p class="description">{{SubDescription}}<span *ngIf="SubDescription.length < post.item.description.length">...</span></p>
     </div>
 
-    <span class="url d-none">{{postViewData.item.fileUrl}}</span>
+    <span class="url d-none">{{post.item.fileUrl}}</span>
 
   </div>
   <!-- block card content ends-->
 
-  <button *ngIf="postViewData.item.type=='article'" type="button" class="btn btn-secondary rounded-0"
+  <button *ngIf="post.item.type=='article'" type="button" class="btn btn-secondary rounded-0"
           (click)="changePost()">Show</button>
 </div>
 <!-- post card ends-->
