--- a/WebBlog/ClientApp/src/app/blog/post-card/post-card.component.html
+++ b/WebBlog/ClientApp/src/app/blog/post-card/post-card.component.html
@@ -27,7 +27,7 @@
 
     <div class="m-0 p-0" style="border-bottom: 2px solid darkorange;">
       <blog-item-info-component
-        [isCreator]="isCreator"
+        [isAvailable]="isCreator"
         [ItemInfo]="post"
         (messageToUpdate)="updatePosts()">
       </blog-item-info-component>
